--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx:22.0.0'
     implementation 'com.google.firebase:firebase-auth:22.0.0'
     implementation 'com.google.firebase:firebase-database:20.2.1'
-
-
+    implementation 'com.google.firebase:firebase-core:21.1.1'
+    implementation 'com.firebaseui:firebase-ui-database:8.0.2'
 }
